[package]
name = "axum-token-auth"
version = "0.1.1"
edition = "2021"
categories = [
    "authentication",
    "network-programming",
    "web-programming::http-server",
]
description = "simple, passwordless authentication middleware for axum"
homepage = "https://github.com/strawlab/axum-token-auth"
keywords = ["axum", "passwordless", "login", "authentication", "stateless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/strawlab/axum-token-auth"

[dependencies]
axum = "0.7.2"
cookie = "0.18"
futures-util = "0.3.30"
http = "1.0.0"
serde = "1.0.103"
thiserror = "1.0.10"
url = "2"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1.35"
tower-service = "0.3.1"
tower-layer = "0.3.2"
tower-cookies = { version = "0.10.0", features = ["signed"] }

[dev-dependencies]
tokio = { version = "1.25", features = ["full"] }
tower = "0.5.1"
anyhow = "1"
if-addrs = "0.13.3"
cookie = "0.18.0"
