[package]
name = "axum-token-auth"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
categories = [
    "authentication",
    "network-programming",
    "web-programming::http-server",
]
description = "simple, passwordless authentication middleware for axum"
homepage = "https://github.com/strawlab/axum-token-auth"
keywords = ["axum", "passwordless", "login", "authentication", "stateless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/strawlab/axum-token-auth"

[dependencies]
axum = "0.8.1"
base64 = "0.22"
cookie = { version = "0.18", features = ["signed"] }
futures-util = "0.3.30"
hmac = "0.12"
sha2 = "0.10"
http = "1.0.0"
serde = { version = "1.0.103", optional = true }
thiserror = "2.0.11"
url = "2"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1.35"
tower-service = "0.3.1"
tower-layer = "0.3.2"
tower-cookies = { version = "0.11.0", features = ["signed"] }

[features]
# Derive `serde::{Serialize, Deserialize}` for `CidrBlock` (as the CIDR string),
# so trusted networks can be read straight from a serde config.
serde = ["dep:serde"]

[package.metadata.docs.rs]
# Document the optional `serde` impls on docs.rs.
all-features = true

[dev-dependencies]
tokio = { version = "1.25", features = ["full"] }
tower = "0.5.1"
anyhow = "1"
if-addrs = "0.15.0"
cookie = "0.18.0"
serde_json = "1"
